Repositionnement des cocas (ah non, des sprites)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,6 +97,11 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/AIModule.AISystem]
 PerceptionSystemClassName=None
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
+EditorStartupMap=/Game/Level/TitleScreen.TitleScreen
+GameDefaultMap=/Game/Level/TitleScreen.TitleScreen
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
